# snake-game

./: README.md  pyproject.toml
src/snake_game/: entities.py  game.py  main.py  states.py
tests/: conftest.py  test_game.py  test_main.py
