[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snake-game"
version = "0.1.0"
description = "A hello world project setup for snake-game"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
snake-game = "snake_game.main:main"
